--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Checkout</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/theme.css" rel="stylesheet">
 </head>
 <body>
 
