--- a/views/product.ejs
+++ b/views/product.ejs
@@ -4,19 +4,39 @@
   <meta charset="UTF-8">
   <title>Product Details</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/theme.css" rel="stylesheet">
 </head>
 <body>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">Supermarket</a>
-    <ul class="navbar-nav ms-auto">
-      <% if (user.role === 'admin') { %>
-        <li class="nav-item"><a class="nav-link" href="/inventory">Inventory</a></li>
-      <% } %>
-      <li class="nav-item"><a class="nav-link" href="/shopping">Shop</a></li>
-      <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
-    </ul>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+  <div class="container">
+    <a class="navbar-brand fw-bold" href="/">Supermarket</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarProduct">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarProduct">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+        <li class="nav-item">
+          <form class="d-flex" action="/shopping" method="GET">
+            <input class="form-control form-control-sm me-2" type="search" placeholder="Search item" name="q">
+            <button class="btn btn-outline-light btn-sm" type="submit">Search</button>
+          </form>
+        </li>
+        <% if (user.role === 'admin') { %>
+          <li class="nav-item"><a class="nav-link" href="/inventory">Inventory</a></li>
+          <li class="nav-item"><a class="nav-link" href="/users">Users</a></li>
+          <li class="nav-item"><a class="nav-link" href="/feedback/all">Feedback</a></li>
+          <li class="nav-item"><a class="nav-link" href="/payments">Payments</a></li>
+        <% } else { %>
+          <li class="nav-item"><a class="nav-link" href="/cart">Cart</a></li>
+        <% } %>
+      </ul>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="/shopping">Shop</a></li>
+        <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
 
@@ -33,5 +53,6 @@
   <a href="/shopping" class="btn btn-secondary">Back</a>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
