--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -42,7 +42,7 @@
           <input type="month" name="expiryDate" class="form-control" required>
         </div>
         <div class="mb-3">
-          <label class="form-label">PIN</label>
+          <label class="form-label">CVC</label>
           <input type="password" name="cardPin" class="form-control" maxlength="6" required>
         </div>
         <button type="submit" class="btn btn-success">Make Payment</button>
