--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -12,6 +12,7 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="/shopping">Shop</a></li>
+        <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
         <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
       </ul>
     </div>
