--- a/views/feedbackList.ejs
+++ b/views/feedbackList.ejs
@@ -21,7 +21,7 @@
         <li class="nav-item"><a class="nav-link" href="/inventory">Inventory</a></li>
         <li class="nav-item"><a class="nav-link" href="/users">Users</a></li>
         <li class="nav-item"><a class="nav-link active" href="/feedback/all">Feedback</a></li>
-        <li class="nav-item"><a class="nav-link" href="/payments">Payments</a></li>
+        <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
       </ul>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
