--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,9 +54,9 @@
           <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
         <% } else if (user.role === 'admin') { %>
           <li class="nav-item"><a class="nav-link" href="/inventory">Inventory</a></li>
-          <li class="nav-item"><a class="nav-link" href="/users">Users</a></li>
+      
           <li class="nav-item"><a class="nav-link" href="/feedback/all">Feedback</a></li>
-          <li class="nav-item"><a class="nav-link" href="/payments">Payments</a></li>
+          <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
           <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
         <% } else { %>
           <li class="nav-item"><a class="nav-link" href="/shopping">Shop</a></li>
