--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -14,7 +14,7 @@
         <li class="nav-item"><a class="nav-link" href="/inventory">Inventory</a></li>
         <li class="nav-item"><a class="nav-link" href="/users">Users</a></li>
         <li class="nav-item"><a class="nav-link" href="/feedback/all">Feedback</a></li>
-        <li class="nav-item"><a class="nav-link" href="/payments">Payments</a></li>
+        <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
         <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
       </ul>
     </div>
