--- a/views/payments.ejs
+++ b/views/payments.ejs
@@ -9,9 +9,10 @@
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">🛒 Supermarket</a>
+    <a class="navbar-brand" href="/">Supermarket</a>
     <ul class="navbar-nav ms-auto">
       <li class="nav-item"><a class="nav-link" href="/inventory">Inventory</a></li>
+      <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
       <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
     </ul>
   </div>
