--- a/views/product.ejs
+++ b/views/product.ejs
@@ -27,13 +27,14 @@
           <li class="nav-item"><a class="nav-link" href="/inventory">Inventory</a></li>
           <li class="nav-item"><a class="nav-link" href="/users">Users</a></li>
           <li class="nav-item"><a class="nav-link" href="/feedback/all">Feedback</a></li>
-          <li class="nav-item"><a class="nav-link" href="/payments">Payments</a></li>
+          <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
         <% } else { %>
           <li class="nav-item"><a class="nav-link" href="/cart">Cart</a></li>
         <% } %>
       </ul>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="/shopping">Shop</a></li>
+        <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
         <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
       </ul>
     </div>
