--- a/views/shopping.ejs
+++ b/views/shopping.ejs
@@ -34,6 +34,7 @@
         <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
         <li class="nav-item"><a class="nav-link" href="/shopping">Shopping</a></li>
         <li class="nav-item"><a class="nav-link" href="/cart"><i class="fas fa-shopping-cart"></i> Cart</a></li>
+        <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
         <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
       </ul>
     </div>
