--- a/views/updateProduct.ejs
+++ b/views/updateProduct.ejs
@@ -19,6 +19,9 @@
             <a class="nav-link" href="/inventory">Inventory</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/history">History</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/addProduct">Add New Product</a>
           </li>
           <li class="nav-item">
