--- a/views/users.ejs
+++ b/views/users.ejs
@@ -18,6 +18,9 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link" href="/">Supermarket</a></li>
         <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="/inventory">Inventory</a></li>
+        <li class="nav-item"><a class="nav-link" href="/feedback/all">Feedback</a></li>
+        <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
       </ul>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
